# Langchain-Study-Assistant

./: README.md
Study-Assistant/: app.py  pyproject.toml  ui.py
Study-Assistant/data/faiss_index/: index.faiss  index.pkl
